added error catch, search clear, and form

--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
 <body>
   <h1 class="title">myTunes</h1>
 
+  <form id="myForm">
+
+    <label for="Search"></label>
+    <input id="search" type="text" name="Search" placeholder="Search for music" style="margin: 0 auto; display: block;"
+      required>
+
+    <label for="submitButton"></label>
+    <input id="submitButton" type="submit" name="submitButton" placeholder="Search"
+      style="margin: 0 auto; display: block;"><br>
+  </form>
 
 
-  <label for="Search"></label>
-  <input id="search" type="text" name="Search" placeholder="Search for music" style="margin: 0 auto; display: block;"
-    required>
-
-  <label for="submitButton"></label>
-  <input id="submitButton" type="submit" name="submitButton" placeholder="Search"
-    style="margin: 0 auto; display: block;"><br>
 
 
 
