--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
   <div id="nowPlaying"></div>
-  <audio id="audioBox" controls src="" style="margin: 0 auto; display: block;">
+  <audio id="audioBox" controls autoplay src="" style="margin: 0 auto; display: block;">
     Audio doesnt display
   </audio><br>
 
